--- a/src/components/Banner.scss
+++ b/src/components/Banner.scss
@@ -1,14 +1,35 @@
-// Banner.scss
+/* Banner.scss */
 
 .banner {
+  position: relative;
+  width: 100%;
+  height: 223px;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 2rem;
+  border-radius: 10px;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 300px;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: 2rem;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    z-index: 1;
   }
-  
+
+  h1 {
+    position: relative;
+    z-index: 2;
+    text-align: center;
+    font-size: 48px;
+    font-weight: 700;
+  }
+}
