--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -1,23 +1,52 @@
 // Card.scss
 
 .card {
-    background-color: #ff6060;
-    color: white;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  
-    img {
-      width: 100%;
-      border-radius: 0.5rem;
-    }
-  
-    .title {
-      margin: 1rem 0;
-      font-size: 1.2rem;
-    }
+  background-color: #ff6060;
+  color: white;
+  padding: 0;
+  border-radius: 8px;
+  display: block;
+  text-align: center;
+  width: 340px;
+  height: 340px;
+  overflow: hidden;
+  position: relative;
+  text-decoration: none;
+  transition: transform 0.2s ease-in-out;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border: 3px solid gray;
+
+  &:hover {
+    transform: translateY(-5px);
   }
-  
+
+  .card-content {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+  }
+
+  .card-title {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
