--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -15,30 +15,62 @@
   padding: 1rem 2rem;
 
   .logo img {
-    height: 40px;
+    height: 68px;
   }
 
   nav a {
-    color: $primary-color;
+    color: black;
     margin: 0 1rem;
     text-decoration: none;
+    font-size: 24px;
+    font-weight: 500;
+    position: relative;
+    margin-right: 50px;
+
+    &:hover,
+    &.active {
+      color: #ff6060;
+    }
+
+    &::after {
+      content: '';
+      display: block;
+      width: 0;
+      height: 2px;
+      background: black;
+      transition: width 0.2s ease-in-out;
+      position: absolute;
+      bottom: -5px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    &:hover::after,
+    &.active::after {
+      width: 100%;
+    }
   }
 }
 
 .main-content {
   flex: 1;
-  padding: 2rem;
+  padding: 20px 50px 50px 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .footer {
-  background-color: $primary-color;
+  background-color: black;
   color: $secondary-color;
   text-align: center;
   padding: 1rem;
   position: relative;
   bottom: 0;
-  width: 100%;
+
+.footer-logo img {
+  height: 40px;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  }
 }
