--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,4 +2,5 @@
 
 $primary-color: #ff6060;
 $secondary-color: #ffffff;
-$font-family: 'Arial', sans-serif;
+$font-family: 'Montserrat', sans-serif;
+
