--- a/src/components/Collapse.scss
+++ b/src/components/Collapse.scss
@@ -10,11 +10,13 @@
       border: none;
       width: 100%;
       text-align: left;
-      font-size: 1.2rem;
+      font-size: 24px;
+      font-weight: 700;
       cursor: pointer;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      border-radius: 25px;
     }
   
     .collapse-icon {
@@ -29,6 +31,7 @@
       padding: 1rem;
       background-color: #f5f5f5;
       border: 1px solid #ddd;
+      border-radius: 25px;
     }
   }
   
