--- a/src/components/Slideshow.scss
+++ b/src/components/Slideshow.scss
@@ -5,6 +5,7 @@
     width: 100%;
     height: 400px;
     overflow: hidden;
+    border-radius: 25px;
   
     .slideshow-image {
       width: 100%;
@@ -16,11 +17,11 @@
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      background-color: rgba(0, 0, 0, 0.5);
+      background-color:transparent;
       color: white;
       border: none;
-      padding: 1rem;
       cursor: pointer;
+      font-size: 100px;
     }
   
     .previous {
@@ -34,8 +35,10 @@
     .slideshow-indicator {
       position: absolute;
       bottom: 10px;
-      right: 10px;
-      background-color: rgba(0, 0, 0, 0.5);
+      right: 50%;
+      background-color: transparent;
+      font-size: 18px;
+      font-weight: 500;
       color: white;
       padding: 0.5rem;
       border-radius: 5px;
