--- a/src/pages/About.scss
+++ b/src/pages/About.scss
@@ -1,17 +1,22 @@
-// About.scss
+@import '../styles/variables';
+@import '../components/Banner.scss';
 
 .about {
-    .banner {
-      width: 100%;
-      height: 300px;
-      background-size: cover;
-      background-position: center;
-  
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
+  width: 100%;
+
+  .content {
+    padding: 50px;
+
+    h2 {
+      font-size: 24px;
+      font-weight: 700;
+      margin-top: 20px;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 1.6;
+      margin-top: 10px;
     }
   }
-  
+}
