--- a/src/pages/NotFound.scss
+++ b/src/pages/NotFound.scss
@@ -5,19 +5,24 @@
     padding: 2rem;
   
     h1 {
-      font-size: 6rem;
+      font-size: 288px;
       color: #ff6060;
+      margin-bottom: 50px;
+      margin-top: 100px;
     }
   
     p {
-      font-size: 1.5rem;
+      font-size: 36px;
+      font-weight: 500;
       color: #ff6060;
+      margin-bottom: 200px;
     }
   
     a {
-      color: #ff6060;
+      color: black;
       text-decoration: underline;
-      font-size: 1.2rem;
+      font-size: 18px;
+      font-weight: 500;
     }
   }
   
