--- a/src/components/Banner.scss
+++ b/src/components/Banner.scss
@@ -1,4 +1,4 @@
-/* Banner.scss */
+@import '../styles/variables';
 
 .banner {
   position: relative;
@@ -9,9 +9,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
+  color: $secondary-color;
   font-size: 2rem;
   border-radius: 10px;
+
+  @media (max-width: 430px) {
+    height: 150px;
+  }
 
   &::before {
     content: '';
@@ -31,5 +35,9 @@
     text-align: center;
     font-size: 48px;
     font-weight: 700;
+
+    @media (max-width: 430px) {
+      font-size: 24px;
+    }
   }
 }
