--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,6 +1,6 @@
 @import '../styles/variables';
-@import '../components/Banner.scss';
-@import '../components/Card.scss';
+@import '../components/Banner';
+@import '../components/Card';
 
 .home {
   width: 100%;
@@ -14,12 +14,27 @@
     padding: 50px;
     border-radius: 25px;
     margin: 0 auto;
+
+    @media (max-width: 430px) {
+      padding: 20px;
+    }
   }
 
   .accommodations {
     display: grid;
-    grid-template-columns: repeat(auto-fit, 340px);
+    grid-template-columns: repeat(3, 1fr);
     gap: 90px;
     justify-content: center;
+
+    @media (max-width: 768px) {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 30px;
+    }
+
+    @media (max-width: 430px) {
+      grid-template-columns: 1fr;
+      gap: 20px;
+      justify-items: center;
+    }
   }
 }
