--- a/src/pages/NotFound.scss
+++ b/src/pages/NotFound.scss
@@ -1,28 +1,42 @@
-// NotFound.scss
+@import '../styles/variables';
 
 .not-found {
-    text-align: center;
-    padding: 2rem;
-  
-    h1 {
-      font-size: 288px;
-      color: #ff6060;
-      margin-bottom: 50px;
-      margin-top: 100px;
-    }
-  
-    p {
-      font-size: 36px;
-      font-weight: 500;
-      color: #ff6060;
-      margin-bottom: 200px;
-    }
-  
-    a {
-      color: black;
-      text-decoration: underline;
-      font-size: 18px;
-      font-weight: 500;
+  text-align: center;
+  padding: 2rem;
+
+  h1 {
+    font-size: 288px;
+    color: $primary-color;
+    margin-bottom: 50px;
+    margin-top: 100px;
+
+    @media (max-width: 430px) {
+      font-size: 144px;
+      margin-top: 50px;
+      margin-bottom: 25px;
     }
   }
-  
+
+  p {
+    font-size: 36px;
+    font-weight: 500;
+    color: $primary-color;
+    margin-bottom: 200px;
+
+    @media (max-width: 430px) {
+      font-size: 18px;
+      margin-bottom: 100px;
+    }
+  }
+
+  a {
+    color: black;
+    text-decoration: underline;
+    font-size: 18px;
+    font-weight: 500;
+
+    @media (max-width: 430px) {
+      font-size: 14px;
+    }
+  }
+}
