--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -56,12 +56,12 @@
   }
 
   .card-title {
-    position: absolute; /* Positionnement absolu pour superposer sur l'image */
+    position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     color: $secondary-color;
-    background-color: rgba(0, 0, 0, 0.5); /* Utiliser un fond semi-transparent pour la lisibilité */
+    background-color: rgba(0, 0, 0, 0.5);
     padding: 10px;
     font-size: 16px;
     font-weight: bold;
@@ -74,7 +74,7 @@
 
     @media (max-width: 430px) {
       position: absolute;
-      background-color: rgba(0, 0, 0, 0.5); /* Utiliser un fond semi-transparent pour la lisibilité */
+      background-color: rgba(0, 0, 0, 0.5);
     }
   }
 }
