--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -45,7 +45,7 @@
     border-radius: 8px 8px 0 0;
 
     @media (max-width: 430px) {
-      height: auto;
+      height: 335px;
       border-radius: 0;
     }
 
