--- a/src/components/Collapse.scss
+++ b/src/components/Collapse.scss
@@ -1,37 +1,58 @@
-// Collapse.scss
+@import '../styles/variables';
 
 .collapse {
-    margin: 1rem 0;
-  
-    .collapse-button {
-      background-color: #ff6060;
-      color: white;
-      padding: 1rem;
-      border: none;
-      width: 100%;
-      text-align: left;
-      font-size: 24px;
-      font-weight: 700;
-      cursor: pointer;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-radius: 25px;
+  margin: 1rem 0;
+
+  .collapse-button {
+    background-color: $primary-color;
+    color: $secondary-color;
+    padding: 1rem;
+    border: none;
+    width: 100%;
+    text-align: left;
+    font-size: 24px;
+    font-weight: 700;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 25px;
+    transition: background-color 0.3s;
+
+    &:hover {
+      background-color: lighten($primary-color, 10%);
     }
-  
-    .collapse-icon {
-      transition: transform 0.3s;
-    }
-  
-    .collapse-icon.open {
-      transform: rotate(180deg);
-    }
-  
-    .collapse-content {
-      padding: 1rem;
-      background-color: #f5f5f5;
-      border: 1px solid #ddd;
-      border-radius: 25px;
+
+    @media (max-width: 768px) {
+      font-size: 18px;
     }
   }
-  
+
+  .collapse-icon {
+    transition: transform 0.3s;
+  }
+
+  .collapse-icon.open {
+    transform: rotate(180deg);
+  }
+
+  .collapse-content {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease, padding 0.5s ease;
+    padding: 0 1rem;
+    background-color: #f5f5f5;
+    border-radius: 25px;
+
+    &.open {
+      max-height: 500px;
+      padding: 1rem 1rem;
+      background-color: #f5f5f5;
+      border-radius: 25px;
+    }
+
+    @media (max-width: 768px) {
+      font-size: 18px;
+    }
+  }
+}
