--- a/src/pages/Accommodation.scss
+++ b/src/pages/Accommodation.scss
@@ -5,6 +5,46 @@
 
   .slideshow {
     width: 100%;
+    height: 400px;
+    overflow: hidden;
+    border-radius: 25px;
+
+    .slideshow-image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .slideshow-button {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: transparent;
+      color: white;
+      border: none;
+      cursor: pointer;
+      font-size: 100px;
+    }
+
+    .previous {
+      left: 10px;
+    }
+
+    .next {
+      right: 10px;
+    }
+
+    .slideshow-indicator {
+      position: absolute;
+      bottom: 10px;
+      right: 50%;
+      background-color: transparent;
+      font-size: 18px;
+      font-weight: 500;
+      color: white;
+      padding: 0.5rem;
+      border-radius: 5px;
+    }
   }
 
   .accommodation-details {
@@ -12,7 +52,7 @@
     justify-content: space-between;
     margin: 20px 0;
 
-    @media (max-width: 430px) {
+    @media (max-width: 768px) {
       flex-direction: column;
     }
 
@@ -25,7 +65,7 @@
         color: $primary-color;
         margin-bottom: 10px;
 
-        @media (max-width: 430px) {
+        @media (max-width: 768px) {
           font-size: 24px;
         }
       }
@@ -36,13 +76,14 @@
         font-size: 18px;
         font-weight: 500;
 
-        @media (max-width: 430px) {
+        @media (max-width: 768px) {
           font-size: 14px;
         }
       }
 
       .tags {
         display: flex;
+        flex-wrap: wrap;
         gap: 10px;
         margin-top: 10px;
 
@@ -54,7 +95,7 @@
           font-size: 14px;
           font-weight: 700;
 
-          @media (max-width: 430px) {
+          @media (max-width: 768px) {
             font-size: 12px;
             padding: 5px 10px;
           }
@@ -62,13 +103,33 @@
       }
     }
 
+    .host-info-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+
+      @media (max-width: 768px) {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+      }
+    }
+
     .host-info {
       display: flex;
+      flex-direction: column;
       align-items: center;
-      gap: 20px;
+      gap: 10px;
 
-      @media (max-width: 430px) {
-        margin-top: 20px;
+      @media (max-width: 768px) {
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        margin-top: 10px;
       }
 
       .host {
@@ -78,8 +139,9 @@
 
         p {
           font-weight: bold;
+          color: $primary-color;
 
-          @media (max-width: 430px) {
+          @media (max-width: 768px) {
             font-size: 14px;
           }
         }
@@ -89,7 +151,7 @@
           height: 50px;
           border-radius: 50%;
 
-          @media (max-width: 430px) {
+          @media (max-width: 768px) {
             width: 30px;
             height: 30px;
           }
@@ -98,17 +160,27 @@
 
       .rating {
         display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 5px;
+        margin-top: 10px;
 
         span {
-          font-size: 24px;
+          font-size: 36px;
           color: $primary-color;
+        }
 
-          &.filled {
-            color: $primary-color;
-          }
+        .filled {
+          color: $primary-color;
+        }
 
-          @media (max-width: 430px) {
-            font-size: 18px;
+        .empty {
+          color: lightgray;
+        }
+
+        @media (max-width: 768px) {
+          span {
+            font-size: 24px;
           }
         }
       }
@@ -122,7 +194,7 @@
     margin-top: 20px;
     width: 100%;
 
-    @media (max-width: 430px) {
+    @media (max-width: 768px) {
       flex-direction: column;
       gap: 10px;
     }
@@ -130,7 +202,7 @@
     .collapse {
       width: 50%;
 
-      @media (max-width: 430px) {
+      @media (max-width: 768px) {
         width: 100%;
       }
     }
