--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -16,7 +16,8 @@
     margin: 0 auto;
 
     @media (max-width: 430px) {
-      padding: 20px;
+      padding: 0;
+      background-color: transparent;
     }
   }
 
